Add additional notes to work on

--- a/odin-signup-form.html
+++ b/odin-signup-form.html
@@ -45,5 +45,6 @@
       <input type="password" name="confirm-pwd" id="confirm-pwd" />
     </div>
   </form>
+  <!-- Add the button here -->
 </body>
 </html>
