Add instructions for black border logo

--- a/odin-signup-form.html
+++ b/odin-signup-form.html
@@ -7,6 +7,8 @@
 </head>
 <body>
   <img src="halie-west-unsplash.jpg" alt="halie-west-jungle" />
+  <!-- Find codebase for black border with logo and text in a previous TOP lesson & put it here -->
+  
   <h1>This is not a real online service! You know you need something like this in your life to 
     help you realize your deepest dreams. Sign up <em>now</em> to get started.</h1>
   <h1>You <em>know</em> you want to.</h1> <!-- Research the other HTML method of formatting this -->
