Add required status to name and password

--- a/odin-signup-form.html
+++ b/odin-signup-form.html
@@ -19,12 +19,12 @@
     <section>
       <div class="form-row">
         <label for="first-name">First Name</label>
-        <input type="text" name="first-name" id="first-name" />
+        <input type="text" name="first-name" id="first-name" required />
       </div>
 
       <div class="form-row">
         <label for="last-name">Last Name</label>
-        <input type="text" name="last-name" id="last-name" />
+        <input type="text" name="last-name" id="last-name" required />
       </div>
 
       <div class="form-row">
@@ -41,12 +41,12 @@
 <!-- Double check password formatting for forms -->
       <div class="form-row">
         <label for="pwd">Password</label>
-        <input type="password" name="pwd" id="pwd" />
+        <input type="password" name="pwd" id="pwd" required />
       </div>
 
       <div class="form-row">
-        <label for="confirm-pwd">Password</label>
-        <input type="password" name="confirm-pwd" id="confirm-pwd" />
+        <label for="confirm-pwd">Confirm Password</label>
+        <input type="password" name="confirm-pwd" id="confirm-pwd" required />
       </div>
     </section>
 
