--- a/odin-signup-form.html
+++ b/odin-signup-form.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Paradise</title>
+    <link rel="stylesheet" href="odin-signup-form.css">
 </head>
 
 <body>
