Modify heading text and change form HTML

--- a/odin-signup-form.html
+++ b/odin-signup-form.html
@@ -12,13 +12,14 @@
   <!-- Find codebase for black border with logo and text in a previous TOP lesson & put it here -->
 
   <h1>This is not a real online service! You know you need something like this in your life to 
-    help you realize your deepest dreams. Sign up <em>now</em> to get started.</h1>
-  <h1>You <em>know</em> you want to.</h1> 
+    help you realize your deepest dreams. Sign up <em>now</em> to get started.
+    
+    You <em>know</em> you want to.</h1> 
   <!-- Research other HTML method of formatting the double h1 tags. Maybe could use <p> & style them -->
 
   <form action="" method="get" class="signup-form">
-  <!-- Labels need to appear on top of the text boxes, not next to them -->
-    <section>
+    <fieldset>
+      <legend>Let's do this!</legend>
       <div class="form-row">
         <label for="first-name">First Name</label>
         <input type="text" name="first-name" id="first-name" required />
@@ -51,7 +52,7 @@
         <label for="confirm-pwd">Confirm Password</label>
         <input type="password" name="confirm-pwd" id="confirm-pwd" required />
       </div>
-    </section>
+    </fieldset>
 
     <div class="form-row">
       <button>Create Account</button>
