Add container with styling for forms

--- a/odin-signup-form.html
+++ b/odin-signup-form.html
@@ -11,52 +11,54 @@
   <img src="halie-west-unsplash.jpg" alt="halie-west-jungle" />
   <!-- Find codebase for black border with logo and text in a previous TOP lesson & put it here -->
 
-  <h1>This is not a real online service! You know you need something like this in your life to 
-    help you realize your deepest dreams. Sign up <em>now</em> to get started.
-    
-    You <em>know</em> you want to.</h1> 
+  <div class="main">
+    <h1>This is not a real online service! You know you need something like this in your life to 
+      help you realize your deepest dreams. Sign up <em>now</em> to get started.
+      
+      You <em>know</em> you want to.</h1> 
   <!-- Research other HTML method of formatting the double h1 tags. Maybe could use <p> & style them -->
 
-  <form action="" method="get" class="signup-form">
-    <fieldset>
-      <legend>Let's do this!</legend>
-      <div class="form-row">
-        <label for="first-name">First Name</label>
-        <input type="text" name="first-name" id="first-name" required />
-      </div>
+    <form action="" method="get" class="signup-form">
+      <fieldset>
+        <legend>Let's do this!</legend>
+        <div class="form-row">
+          <label for="first-name">First Name</label>
+          <input type="text" name="first-name" id="first-name" required />
+        </div>
 
-      <div class="form-row">
-        <label for="last-name">Last Name</label>
-        <input type="text" name="last-name" id="last-name" required />
-      </div>
+        <div class="form-row">
+          <label for="last-name">Last Name</label>
+          <input type="text" name="last-name" id="last-name" required />
+        </div>
 
-      <div class="form-row">
-        <label for="email">Email</label>
-        <input type="email" name="email" id="email" placeholder="joe@example.com" />
-      </div>
+        <div class="form-row">
+          <label for="email">Email</label>
+          <input type="email" name="email" id="email" placeholder="joe@example.com" />
+        </div>
 
-      <div class="form-row">
-        <label for="phone">Phone Number</label>
-        <input type="tel" name="phone" id="phone" min="0" max="9" 
-               placeholder="555-555-5555"
-               pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" />
-      </div>
+        <div class="form-row">
+          <label for="phone">Phone Number</label>
+          <input type="tel" name="phone" id="phone" min="0" max="9" 
+                placeholder="555-555-5555"
+                pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" />
+        </div>
 
 <!-- Will need to change/add something for the "Passwords do not match" message -->
-      <div class="form-row">
-        <label for="pwd">Password</label>
-        <input type="password" name="pwd" id="pwd" required />
-      </div>
+        <div class="form-row">
+          <label for="pwd">Password</label>
+          <input type="password" name="pwd" id="pwd" required />
+        </div>
+
+        <div class="form-row">
+          <label for="confirm-pwd">Confirm Password</label>
+          <input type="password" name="confirm-pwd" id="confirm-pwd" required />
+        </div>
+      </fieldset>
 
       <div class="form-row">
-        <label for="confirm-pwd">Confirm Password</label>
-        <input type="password" name="confirm-pwd" id="confirm-pwd" required />
+        <button>Create Account</button>
       </div>
-    </fieldset>
-
-    <div class="form-row">
-      <button>Create Account</button>
-    </div>
-  </form>
+    </form>
+  </div>
 </body>
 </html>
