Modify page with additional text and links

--- a/odin-signup-form.html
+++ b/odin-signup-form.html
@@ -13,14 +13,13 @@
 
   <div class="main">
     <h1>This is not a real online service! You know you need something like this in your life to 
-      help you realize your deepest dreams. Sign up <em>now</em> to get started.
+    help you realize your deepest dreams. Sign up <em>now</em> to get started. </h1>
       
-      You <em>know</em> you want to.</h1> 
-  <!-- Research other HTML method of formatting the double h1 tags. Maybe could use <p> & style them -->
+    <h1>You <em>know</em> you want to.</h1> 
 
     <form action="" method="get" class="signup-form">
-      <fieldset>
-        <legend>Let's do this!</legend>
+      <section>
+        <p>Let's do this!</p>
         <div class="form-row">
           <label for="first-name">First Name</label>
           <input type="text" name="first-name" id="first-name" required />
@@ -53,11 +52,13 @@
           <label for="confirm-pwd">Confirm Password</label>
           <input type="password" name="confirm-pwd" id="confirm-pwd" required />
         </div>
-      </fieldset>
+      </section>
 
       <div class="form-row">
         <button>Create Account</button>
       </div>
+
+      <p>Already have an account? <a href="">Log in.</a></p>
     </form>
   </div>
 </body>
