--- a/odin-signup-form.html
+++ b/odin-signup-form.html
@@ -12,10 +12,12 @@
   <!-- Find codebase for black border with logo and text in a previous TOP lesson & put it here -->
 
   <div class="main">
-    <h1>This is not a real online service! You know you need something like this in your life to 
-    help you realize your deepest dreams. Sign up <em>now</em> to get started. </h1>
-      
-    <h1>You <em>know</em> you want to.</h1> 
+    <div class="intro">
+      <h1>This is not a real online service! You know you need something like this in your life to 
+        help you realize your deepest dreams. Sign up <em>now</em> to get started. </h1>
+          
+      <h1>You <em>know</em> you want to.</h1> 
+    </div>
 
     <form action="" method="get" class="signup-form">
       <section>
