Add notes for grouping input section

--- a/odin-signup-form.html
+++ b/odin-signup-form.html
@@ -19,6 +19,7 @@
       <h1>You <em>know</em> you want to.</h1> 
     </div>
 
+  <!-- May need to group each input into two separate divs & not just all in one -->
     <form action="" method="get" class="signup-form">
       <section>
         <p>Let's do this!</p>
