--- a/odin-signup-form.html
+++ b/odin-signup-form.html
@@ -19,7 +19,7 @@
       <h1>You <em>know</em> you want to.</h1> 
     </div>
 
-  <!-- May need to group each input into two separate divs & not just all in one -->
+  <!-- May need to group the labels & inputs into two separate divs or sections with a class & not just all in one -->
     <form action="" method="get" class="signup-form">
       <section>
         <p>Let's do this!</p>
