--- a/odin-signup-form.html
+++ b/odin-signup-form.html
@@ -22,50 +22,47 @@
     <form action="" method="get" class="signup-form">
       <section>
         <p>Let's do this!</p>
-        <div class="container-1">
-          <!-- Divide into 3 sections instead of 2: First + Last Name, Email + Phone, Pwd + Confirm -->
-          <div class="section-1">
-            <div class="form-row">
-              <label for="first-name">First Name</label>
-              <input type="text" name="first-name" id="first-name" required />
-            </div>
+        <div class="section-1">
+          <div class="form-row">
+            <label for="first-name">First Name</label>
+            <input type="text" name="first-name" id="first-name" required />
+          </div>
 
-            <div class="form-row">
-              <label for="email">Email</label>
-              <input type="email" name="email" id="email" placeholder="joe@example.com" />
-            </div>
-
-            <!-- Will need to change/add something for the "Passwords do not match" message -->
-            <div class="form-row">
-              <label for="pwd">Password</label>
-              <input type="password" name="pwd" id="pwd" required />
-            </div>
+          <div class="form-row">
+            <label for="last-name">Last Name</label>
+            <input type="text" name="last-name" id="last-name" required />
           </div>
         </div>
 
-        <div class="container-2">
-          <div class="section-2">
-            <div class="form-row">
-              <label for="last-name">Last Name</label>
-              <input type="text" name="last-name" id="last-name" required />
-            </div>
+        <div class="section-2">  
+          <div class="form-row">
+            <label for="email">Email</label>
+            <input type="email" name="email" id="email" placeholder="joe@example.com" />
+          </div>
 
-            <div class="form-row">
-              <label for="phone">Phone Number</label>
-              <input type="tel" name="phone" id="phone" min="0" max="9" 
-                    placeholder="555-555-5555"
-                    pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" />
-            </div>
+          <div class="form-row">
+            <label for="phone">Phone Number</label>
+            <input type="tel" name="phone" id="phone" min="0" max="9" 
+                  placeholder="555-555-5555"
+                  pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" />
+          </div>
+        </div>
 
-            <!-- Will need to change/add something for the "Passwords do not match" message -->
-            <div class="form-row">
-              <label for="confirm-pwd">Confirm Password</label>
-              <input type="password" name="confirm-pwd" id="confirm-pwd" required />
-            </div>
+        <div class="section-3">
+          <!-- Will need to change/add something for the "Passwords do not match" message -->
+          <div class="form-row">
+            <label for="pwd">Password</label>
+            <input type="password" name="pwd" id="pwd" required />
+          </div>
+
+          <div class="form-row">
+            <label for="confirm-pwd">Confirm Password</label>
+            <input type="password" name="confirm-pwd" id="confirm-pwd" required />
           </div>
         </div>
       </section>
 
+      <!-- Potentially change div name to something else? Button should still work since it's under form element -->
       <div class="form-row">
         <button>Create Account</button>
       </div>
