Add logo with text and border

--- a/odin-signup-form.html
+++ b/odin-signup-form.html
@@ -9,7 +9,13 @@
 
 <body>
   <img src="halie-west-unsplash.jpg" alt="halie-west-jungle" />
-  <!-- Find codebase for black border with logo and text in a previous TOP lesson & put it here -->
+
+  <div class="container">
+    <div class="odin-body">
+      <img src="odin-lined.png" alt="top-logo" class="odin-logo">
+      <p class="odin-text">ODIN</p>
+    </div>
+  </div>
 
   <div class="main">
     <div class="intro">
