Add photo credit as footer

--- a/odin-signup-form.html
+++ b/odin-signup-form.html
@@ -76,5 +76,8 @@
       <p>Already have an account? <a href="">Log in.</a></p>
     </form>
   </div>
+
+  <p class="footer">Photo by <a href="https://unsplash.com/photos/25xggax4bSA">Halie West</a> 
+    on <a href="http://unsplash.com">Unsplash</a></p>
 </body>
 </html>
